fix overflow issues

--- a/styles/hero.module.scss
+++ b/styles/hero.module.scss
@@ -91,6 +91,7 @@
     line-height: 0.8;
     user-select: none;
     cursor: default;
+    overflow: hidden;
 
     header {
       .caption {
